add name gradient

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Styling for Header */
+.title-gradient{
+    /* Fallback: Set a background color. */
+    background-color: teal;
 
+    background: linear-gradient(270deg, #3ba4c6, #3bc643, #15e3f3, #e7a91f, #0a50e9);
+    background-size: 1000% 1000%;
+    background-repeat: repeat;
+
+    -webkit-animation: title-gradient 21s ease infinite;
+    -moz-animation: title-gradient 21s ease infinite;
+    animation: title-gradient 21s ease infinite;
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+@-webkit-keyframes title-gradient {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@-moz-keyframes title-gradient {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@keyframes title-gradient {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
