add header and layout sections

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,9 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
+
+    font-weight: bold;
+    font-style: italic;
 }
 
 @-webkit-keyframes title-gradient {
